ci: Replace bionic with hirsute for system Qt 5.15.2
Compiler versions:
 - bionic: 8.4.0-1ubuntu1
 - hirsute: 8.4.0-7ubuntu3

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -205,7 +205,7 @@ task:
     folder: "releases"
   << : *GLOBAL_TASK_TEMPLATE
   container:
-    image: ubuntu:bionic
+    image: ubuntu:hirsute
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_native_qt5.sh"
